@@ -1,0 +1,5 @@
+username  = user-name
+password  = pass-word
+workspace = work-space
+server    = http://socialtext.net
+class     = Socialtext::Resting::Mock
